# Agentic-Workflows-in-Python

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ABSOLUTE_FINAL_STATUS.md  ALERT_SYSTEM_COMPLETE.md  API_IMPLEMENTATION_STATUS.md  API_USAGE_GUIDE.md  ARCHITECTURE.md  AUDIT_COMPLETE.md  AUTHENTICATION_COMPLETE.md  AUTHENTICATION_VERIFIED.md  BLOG_POST_FINAL.md  BLOG_POST_TEMPLATE.md  BUILD_SUCCESS.md  CHANGELOG.md  CHECK_RENDER_DASHBOARD.md  CLEANUP_SUMMARY.md  COMPETITION_READY.md  COMPLETE_FINAL_STATUS.md  COMPLETE_SETUP.ps1  COMPREHENSIVE_CHECK.md  CONTEST_READY.md  CONTEST_STATUS.md  CONTEST_SUBMISSION_CHECKLIST.md  CONTRIBUTING.md  CREATE_PR_INSTRUCTIONS.md  CURRENT_STATUS.md  DEPLOY.md  DEPLOY.txt  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_DEBUG.md  DEPLOYMENT_FINAL_FIX.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SOLUTION.md  DEPLOYMENT_STATUS.md  (+117 more)
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  frontend-ci.yml  lighthouse.yml  lint-typecheck.yml  playwright-e2e.yml  status-badge.yml  test.yml
.kiro/: README.md  code-snippets.md  development-log.md  prompt_frontend.md
.kiro/specs/: email_summarizer.yaml  lazy_file_butler.yaml  universal_workflow_template.yaml  workflow_template.yaml
.kiro/steering/: AGENTS.md
agentic_workflows/: celery_app.py  config.py  runner.py  worker.py
agentic_workflows/agents/: __init__.py  base_agent.py  executor_agent.py  observer_agent.py  planner_agent.py  recovery_agent.py  self_healing_agent.py  validator_agent.py
agentic_workflows/api/: __init__.py  server.py
agentic_workflows/auth/: jwt.py
agentic_workflows/cache/: __init__.py  redis_client.py
agentic_workflows/core/: __init__.py  agents.py  audit.py  exceptions.py  orchestrator.py  retry.py  spec.py
agentic_workflows/dag/: __init__.py  dag_engine.py
agentic_workflows/db/: __init__.py  database.py  models.py  session.py
agentic_workflows/llm/: __init__.py  base.py  claude_provider.py  dummy_provider.py  factory.py  openai_provider.py
agentic_workflows/monitoring/: logger.py  metrics.py
agentic_workflows/plugins/: __init__.py  base.py  email_summarizer.py  file_organizer.py  http_task.py
agentic_workflows/tasks/: __init__.py  workflow_tasks.py
agentic_workflows/utils/: __init__.py  email.py  helpers.py  oauth.py  sentry.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_password_reset.py  003_add_oauth_fields.py  (+1 more)
api/: index.py
audit/: audit-report.md
demo/: responsive-checklist.md
deploy/: README.md  nginx.conf
design/: colors.md
docker/: Dockerfile.prod
docs/: API.md  DEPLOYMENT.md  OAUTH_SETUP.md  PASSWORD_RESET.md  PLUGINS.md  blog-snippets.md  demo-gif.md  frontend-improvements.md
examples/: README.md  sample_emails.txt
fixes/: 0001-fix-requirements-dependencies.patch  0002-add-security-scanning-ci.patch  COMMIT_MESSAGES.md  DECISIONS.md  README.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
tests/: test_api.py  test_config.py  test_file_organizer.py  test_orchestrator.py  test_plugins.py  test_run_uniqueness.py  test_utils.py
ui/: .env.example  .env.production  .eslintrc.cjs  README.md  SETUP.md  UI_FEATURES.md  UPGRADE_UI.ps1  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
(+87 files in other folders)
